Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1983

Impala should handle corrupted table stats better

    XMLWordPrintableJSON

Details

    Description

      We see table stats get messed up from time to time, not sure if it's due to upgrading or anything else.
      The table has data but the cardinality becomes 0. This could cause Impala to choose wrong join order and affect query performance.

      A warning to inform the user the table stats could be corrupted will be helpful.
      Also if possible Impala should check if the cardinality is valid instead of simply choosing single node plan when cardinality == 0.

      Attachments

        Issue Links

          Activity

            People

              mgrund_impala_bb91 Martin Grund
              jyu@cloudera.com Juan Yu
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: