fe/src/main/java/com/cloudera/impala/util/MaxRowsProcessedVisitor.java
@@ -34,7 +34,8 @@ public class MaxRowsProcessedVisitor implements Visitor<PlanNode> {
     if (caller instanceof ScanNode) {
       long tmp = caller.getInputCardinality();
       ScanNode scan = (ScanNode) caller;
-      if (scan.isTableMissingTableStats() && !scan.hasLimit()) {
+      if ((scan.isTableMissingTableStats() ||
+          scan.hasCorruptTableStats()) && !scan.hasLimit()) {
         abort_ = true;
         return;
       }
